doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/arnavratan/Desktop/ppaDraft11/+libs/opencsv-4.1.jar:/Users/arnavratan/Desktop/ppaDraft11/+libs/commons-lang3-3.7.jar:/Users/arnavratan/Desktop/ppaDraft11/+libs/commons-text-1.2.jar:/Users/arnavratan/Desktop/ppaDraft11
-d
/Users/arnavratan/Desktop/ppaDraft11/doc
-encoding
UTF-8
-charset
UTF-8
/Users/arnavratan/Desktop/ppaDraft11/Statistics.java
<---- end of javadoc command ---->
Loading source file /Users/arnavratan/Desktop/ppaDraft11/Statistics.java...
/Users/arnavratan/Desktop/ppaDraft11/Statistics.java:158: error: not a statement
      return bestReviewNeighbourhood; dsvjabhjbflachjlsb
                                      ^
/Users/arnavratan/Desktop/ppaDraft11/Statistics.java:158: error: ';' expected
      return bestReviewNeighbourhood; dsvjabhjbflachjlsb
                                                        ^
2 errors
